linuxdoom_srcs = [
  'doomdef.c',
  'doomstat.c',
  'dstrings.c',
  'info.c',
  'sounds.c',
  'tables.c',

  'd_items.c',
  'd_main.c',
  'd_net.c',
  'f_finale.c',
  'f_wipe.c',
  'g_game.c',
  'i_main.c',
  'i_net.c',
  'i_sound.c',
  'i_system.c',
  'i_video.c',
  'm_argv.c',
  'm_bbox.c',
  'm_cheat.c',
  'm_fixed.c',
  'm_menu.c',
  'm_misc.c',
  'm_random.c',
  'm_swap.c',
  'p_ceilng.c',
  'p_doors.c',
  'p_enemy.c',
  'p_floor.c',
  'p_inter.c',
  'p_lights.c',
  'p_map.c',
  'p_maputl.c',
  'p_mobj.c',
  'p_plats.c',
  'p_pspr.c',
  'p_saveg.c',
  'p_setup.c',
  'p_sight.c',
  'p_spec.c',
  'p_switch.c',
  'p_telept.c',
  'p_tick.c',
  'p_user.c',
  'r_bsp.c',
  'r_data.c',
  'r_draw.c',
  'r_main.c',
  'r_plane.c',
  'r_segs.c',
  'r_sky.c',
  'r_things.c',
  's_sound.c',
  'v_video.c',
  'w_wad.c',
  'z_zone.c',

  'am_map.c',
  'hu_lib.c',
  'hu_stuff.c',
  'st_lib.c',
  'st_stuff.c',
  'wi_stuff.c',
]

cc = meson.get_compiler('c')
m_dep = cc.find_library('m', required : false)
x11_dep = dependency('x11')
xext_dep = dependency('xext')

executable('linuxdoom', linuxdoom_srcs, c_args: ['-DNORMALUNIX', '-DLINUX'], dependencies: [ m_dep, x11_dep, xext_dep ])
